Increased Z-index of modal to 150, to ensure that scrolls don't overlap on modal

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -131,7 +131,7 @@ header h1 {
 }
 
 .modal-is-visible .cd-modal {
-    z-index: 100;
+    z-index: 150;
     visibility: visible;
     opacity: 1;
     pointer-events: auto;
